@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-22T01:01:36Z",
+  "timestamp" : "2025-09-24T00:56:57Z",
   "count_outdated" : 110,
   "uniques_outdated" : 92,
-  "count" : 114,
-  "uniques" : 96,
+  "count" : 115,
+  "uniques" : 97,
   "clones" : [
     {
       "timestamp": "2025-09-12T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2025-09-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
